	  pop-up windows occur.  Text should continue to update normally with or without
	  the popup windows present.
	* arch/arm/src/common/up_checkstack.c:  ARM stack overflow checking submitted
	  by Hal Glenn.
	* arch/arm/src/lpc17xx: Changes to compile successfully with no serial console
	  (also submitted by Hal Glenn).
	* graphics/nxfonts/nxfonts_convert.c:  Fixed a critical bug that caused
	  when renderer some fonts with bits-per-pixel > 8
	* graphics/nxbe/nxbe_move.c: Fixed an error in the graphics move logic (This
	  was a previously untested interface).  Basically, there is some confusion
	  between use of (x,y) as a relative offset or as an absolute position.
	* graphics/nxbe/nxbe_close.c:  Fixed an important graphics system bug:
	  When a window is closed, the display was not being updated.  The old
	  window graphic was left on the display for a time.

6.7 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* Makefile:  Added a export target that will bundle up all of the NuttX
	  libraries, header files, and the startup object into an export-able
	  tarball.
	* arch/arm/src/lpc17xx/lpc17_can.h:  Correct some typos in the CAN
	  register definitions.
	* drivers/serial/serialirq.c:  Correct an error that can occur if the
	  serial RX buffer becomes full.  Data is now discarded in that case;
	  before, leaving data in the hardware would cause infinite interrupts
	  one most MCUs since you must read the data in order to clear the
	  interrupt.
	* arch/arm/src/lpc17xx/lpc17_can.c:  Added a CAN driver contributed by
	  Li Zhuoyi (Lzyy).
	* include/stddefs.h and sys/types:  Added type wchar_t.
	* fs/fat/fat_fat32dirent.c:  The configuration CONFIG_FAT_LCNAMES has
	  been around for some time but never tested until now.  This setting
	  will mimic the NT 8.3 file name behavior:  File names or extensions 
	  may be all upper or all lower case (but not mixed).  If
	  CONFIG_FAT_LCNAMES is not selected, all filenames are strictly upper
	  case.